completed responsive design of reply form and fixed bug with elements getting cut off when resizing to mobile

--- a/react-interactive-comments-section/src/App.scss
+++ b/react-interactive-comments-section/src/App.scss
@@ -16,9 +16,9 @@ $white: hsl(0, 0%, 100%);
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 100vh;
-  width:100vw;
-  justify-content: space-between;
+  height: 100%;
+  width:100%;
+  justify-content: space-around;
   padding: 20px 0 20px 0;
 
 }
